Fix : 양방향 친구관계 설정