@@ -11,6 +11,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,7 +26,8 @@ public class FriendService {
         if(addFriendsDto.getFriendIds().size() != users.size()){
             throw new RuntimeException("존재하지 않는 유저는 추가할 수 없습니다.");
         }
-        List<Friend> friends = users.stream().map(subUser -> Friend.of(user, subUser)).toList();
+        List<Friend> friends = users.stream().map(subUser -> Friend.of(user, subUser)).collect(Collectors.toList());
+        users.forEach(mainUser -> friends.add(Friend.of(mainUser, user)));
         friendRepository.saveAll(friends);
     }
 
